tools/tests/errors/surf_type_09.experr
type 'Float' is not iterable
